[project]
name = "comfyui-multi_style_csv_loader"
description = "This extension allows users to load multiple styles from a CSV file, primarily for migration purposes from the A1111 or Forge Stable Diffusion web UI."
version = "1.1.0"
license = { text = "MIT License" }

[project.urls]
Repository = "https://github.com/theUpsider/ComfyUI-Styles_CSV_Loader"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "theupsider"
DisplayName = "ComfyUI-Multi_Style_CSV_Loader"
Icon = ""
